padding and font and some js changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="card__left">
         <div class="bill">
           <h4 for="bill" class="bill__label">Bill</h4>
-          <input type="number" class="bill__input" min="1" value="150" />
+          <input type="number" class="bill__input" min="1" placeholder="0" />
           <div class="bill__image">
             <img src="./images/icon-dollar.svg" alt="dollar-sign" />
           </div>
@@ -84,7 +84,7 @@
             min="1"
             class="people__input"
             id="people"
-            value="5"
+            placeholder="0"
           />
           <div class="error hide">Can't be zero</div>
           <div class="people__image">
